# operadic-catalog

./: .gitignore  README.md  pyproject.toml
data/: moduli_quotient.csv  operadic_classification.json
latex/: main.tex  refs.bib  supplementary.tex
lean/: OperadicCatalog.lean  lake-manifest.json  lakefile.lean
python/operadic_catalog/: equivalence.py  morphisms.py  operad.py
python/tests/: test_algebra.py  test_equivalence.py  test_generators.py  test_operad_axioms.py
src/operadic_catalog/: __init__.py  algebra.py  generators.py  sigrist_ueda.py
tests/: test_algebra.py  test_equivalence.py  test_generators.py  test_operad_axioms.py
