[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operadic-catalog"
version = "0.1.0"
description = "Operadic mechanism catalog for superconducting pairing classification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
